# eu-ai-act-validator-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  STYLE_GUIDE.md  TECHNICAL_SPECIFICATION_IDEPOSIT.md  TECHNICAL_SPECIFICATION_IDEPOSIT_EN.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
docs/: ACCURACY_TEST_LLM.md  API_TEST_GUIDE.md  CHECK_EMBEDDINGS_IN_DB.md  ComplianceCode-Gatekeeper.postman_collection.json  DASHBOARD_SUMMARY.md  DEPLOY_BETA.md  ENV_SETUP.md  FIX_EMBEDDINGS.md  FIX_VECTOR_SEARCH.md  GO_LIVE_CHECKLIST.md  GO_TO_MARKET_WEBSITE.md  HOW_TO_TEST_API.md  IMPLEMENTATION_SUMMARY.md  INTERNATIONAL_ROADMAP.md  NEXT_STEPS.md  OPENAI_SETUP.md  OPENAI_UPGRADE.md  PDF_EXPORT_INSTRUCTIES.md  PDF_EXPORT_INSTRUCTIONS_EN.md  PII_PRIVACY_WORKFLOW.md  QUICK_START.md  RATE_LIMIT_AND_ANOMALY.md  README.md  RESTART_SERVER.md  STRESS_TEST_K6.md  TERMINAL_INSTRUCTIONS.md  TROUBLESHOOTING.md  TROUBLESHOOTING_VECTOR_SEARCH.md  VERIFY_AFTER_SEED.md  WEBSITE_MINIMUM_API_PRODUCT.md  supabase-audit-feedback.sql
engine-rust/: Cargo.toml  ENGINE_RUST_BESCHRIJVING_GEMINI.md  README.md  TEST_RESULTS.md
engine-rust/benches/: evaluate_bench.rs  scale_bench.rs
engine-rust/data/: knowledge.json  max_volume_100ms.json  prompt_embeddings.json  scenarios_36.csv
engine-rust/src/: engine.rs  lib.rs  main.rs  vector.rs
ip_research_agent/: .env.example  ip_research_agent.py  requirements.txt  research_report.md
public/: llm.txt  robots.txt
scripts/: accuracy-test.js  load-test.js  (+9 more)
(+40 files in other folders)
