[package]
name = "compliance-engine"
version = "0.1.0"
edition = "2021"
description = "EU AI Act Compliance Engine - Article-Specific Filtering (ASCF) in Rust"
authors = ["ComplianceCode.ai"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ndarray = "0.16"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "evaluate_bench"
harness = false

[[bench]]
name = "scale_bench"
harness = false
